# sysremote

./: .gitignore  Cargo.toml  README.md
host/: Cargo.toml  app.manifest  build.rs
host/src/: agent.rs  discovery.rs  gui.rs  logging.rs  main.rs  shmem_utils.rs
installers/: BUILD_RULES.md  SysRemoteUnified.iss  diagnose_host.bat  host.iss  setup.iss  uninstall_host.bat  viewer.iss
server/: requirements.txt  servidor.py
server/templates/: admin.html  logs.html
shared/: Cargo.toml
shared/src/: lib.rs
viewer/: Cargo.toml  build.rs
viewer/src/: discovery.rs  main.rs
