[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.20"
local-ip-address = "0.5"
whoami = "1.4"
url = "2.4"
serde_json = "1.0"
enigo = "0.3"
image = "0.24"
anyhow = "1.0"
futures-util = "0.3"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
winapi = { version = "0.3", features = ["windef", "winuser", "wingdi", "winbase", "processthreadsapi", "securitybaseapi", "handleapi", "objbase", "wtsapi32", "userenv", "wincon", "consoleapi", "winsvc", "errhandlingapi", "tlhelp32", "memoryapi", "sddl", "namedpipeapi", "fileapi"] }
xcap = "0.8.1"
openh264 = "0.9.3"
windows-service = "0.8.0"
screenshots = "0.8.10"
eframe = "0.24"

[build-dependencies]
winres = "0.1.12"
