[package]
name = "viewer"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
tokio = { version = "1.0", features = ["full"] }
eframe = "0.24"
image = "0.24"
anyhow = "1.0"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
openh264 = "0.9.3"
winapi = { version = "0.3.9", features = ["windef", "winuser"] }

[build-dependencies]
winres = "0.1.12"
